--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   firebase_auth: ^0.16.1
   firebase_database: ^3.0.7
   firebase_core: ^0.4.3
-
+  pull_to_refresh: ^1.5.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
