--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,23 @@ dependencies:
   firebase_database: ^3.0.7
   firebase_core: ^0.4.3
   pull_to_refresh: ^1.5.7
+  cloud_firestore: ^0.13.6
+  shared_preferences: ^0.5.6
+  google_sign_in: ^4.1.1
+  firebase_messaging: ^6.0.9
+  location: ^2.3.5
+  geocoder: ^0.2.1
+  flare_flutter: ^1.8.3
+  image_picker: ^0.6.2+3
+  uuid: ^2.0.4
+  image: ^2.1.11
+  font_awesome_flutter: ^8.5.0
+  async: ^2.4.0
+  http: ^0.12.0+3
+  firebase_storage: ^3.1.1
+  cached_network_image: ^2.0.0
+  algolia: ^0.1.6+1
+  flutter_masked_text: ^0.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
