--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   cached_network_image: ^2.0.0
   algolia: ^0.1.6+1
   flutter_masked_text: ^0.7.0
+  flutter_local_notifications: 1.4.0
+  photo_view: ^0.5.0
+  fluttertoast: ^3.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
