--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_local_notifications: 1.4.0
   photo_view: ^0.5.0
   fluttertoast: ^3.1.3
+  image_cropper: 1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
